on mets UNIQUEMENT des li dans un ul

--- a/music/rap.html
+++ b/music/rap.html
@@ -72,74 +72,74 @@
                 <ul>
                     <li>
                         Columbine
+                        <figure class="float-rightbordered">
+                            <img src="images/columbine.jpg"
+                                alt="le logo du groupe, «colombe-Kalash» ( kalachnikov, le fusil d'assaut russe AK-47)" />
+                        </figure>
+                        <p>
+                            collectif de rap français formé en 2014, originaire de la banlieu de Rennes, leur troisième
+                            album Adieu bientôt a été certifié disque de platine.
+                            Leur titres les plus connus sont pierre, feuille, papier, ciseau; c'est pas grave, adieu
+                            bientôt, les prélis.
+                        </p>
                     </li>
-                    <figure class="float-rightbordered">
-                        <img src="images/columbine.jpg"
-                            alt="le logo du groupe, «colombe-Kalash» ( kalachnikov, le fusil d'assaut russe AK-47)" />
-                    </figure>
-                    <p>
-                        collectif de rap français formé en 2014, originaire de la banlieu de Rennes, leur troisième
-                        album Adieu bientôt a été certifié disque de platine.
-                        Leur titres les plus connus sont pierre, feuille, papier, ciseau; c'est pas grave, adieu
-                        bientôt, les prélis.
-                    </p>
                     <li>
                         Nekfeu
+                        <figure class="float-rightbordered">
+                            <img src="images/nekfeu.jpg" height="300px" width="300px" alt="" />
+                        </figure>
+                        <p>
+                            Membre du groupe S-Crew et 1995, il appartient au collectif l'Entourage et a également fait
+                            partie de 5 Majeur.
+                            Son dernier album, les étoiles vagabondes, est certifié triple disque de platine. Ses
+                            principaux
+                            titres sont princesse, on verra, ma dope.
+                        </p>
                     </li>
-                    <figure class="float-rightbordered">
-                        <img src="images/nekfeu.jpg" height="300px" width="300px" alt="" />
-                    </figure>
-                    <p>
-                        Membre du groupe S-Crew et 1995, il appartient au collectif l'Entourage et a également fait
-                        partie de 5 Majeur.
-                        Son dernier album, les étoiles vagabondes, est certifié triple disque de platine. Ses principaux
-                        titres sont princesse, on verra, ma dope.
-                    </p>
                     <li>
                         PNL
-                    </li>
-                    <figure class="float-rightbordered">
-                        <img src="PT19_20\images\pnl.jpg" alt="la pochette de leur dernier album, deux frères." />
-                    </figure>
-                    <p>
-                        sigle de Peace N’ Lovés, est un groupe de rap français indépendant, composé de deux frères,
-                        Ademo et N.O.S (de leurs vrais noms Tarik et Nabil Andrieu),
-                        originaires de la cité des Tarterêts à Corbeil-Essonnes.
-                        Leur single "au DD" a accumulé plus de 12 millions de vues en moins de 48h. Celui-ci compte
-                        aujourd'hui plus de 123 millions de vues.
-                        Mi-août 2019, l'album "deux frères" devient triple disque de platine avec plus de 300 000
-                        ventes.
-                    </p>
-                    <div class="spotify-integ">
-                        <div>
-                            <iframe src="https://open.spotify.com/embed/track/5lCxlSBFyP5g4EhVypAoOu" frameborder="0"
-                                allowtransparency="true" allow="encrypted-media"></iframe>
+                        <figure class="float-rightbordered">
+                            <img src="PT19_20\images\pnl.jpg" alt="la pochette de leur dernier album, deux frères." />
+                        </figure>
+                        <p>
+                            sigle de Peace N’ Lovés, est un groupe de rap français indépendant, composé de deux frères,
+                            Ademo et N.O.S (de leurs vrais noms Tarik et Nabil Andrieu),
+                            originaires de la cité des Tarterêts à Corbeil-Essonnes.
+                            Leur single "au DD" a accumulé plus de 12 millions de vues en moins de 48h. Celui-ci compte
+                            aujourd'hui plus de 123 millions de vues.
+                            Mi-août 2019, l'album "deux frères" devient triple disque de platine avec plus de 300 000
+                            ventes.
+                        </p>
+                        <div class="spotify-integ">
+                            <div>
+                                <iframe src="https://open.spotify.com/embed/track/5lCxlSBFyP5g4EhVypAoOu"
+                                    frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                            </div>
                         </div>
-                    </div>
-                    <figure class="simple-yt">
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/BtyHYIpykN0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                        <figcaption>
-                            Le clip "au DD", au détail, qui fait référence à la vente de cannabis découpé en petite
-                            quantité.
-                        </figcaption>
-                    </figure>
+                        <figure class="simple-yt">
+                            <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/BtyHYIpykN0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                            <figcaption>
+                                Le clip "au DD", au détail, qui fait référence à la vente de cannabis découpé en petite
+                                quantité.
+                            </figcaption>
+                        </figure>
+                    </li>
                     <li>
                         Orelsan
+                        <figure class="float-rightbordered">
+                            <img src="images/orelsan.jpg" alt="" />
+                        </figure>
+                        <p>
+                            Membre des Casseurs-Flowteurs avec son ami Gringe, voix française de Saitama du manga One
+                            Punch
+                            Man, il revient à la musique en 2017 avec le titre "basique",
+                            avant de sortir l'album la fête est finie, certifié disque de diamant. Le rappeur a remporté
+                            trois Victoires de la musique.
+                            Ses titres les plus populaires sont paradis, défaite de famille et mes grands-parents.
+                        </p>
                     </li>
-                    <figure class="float-rightbordered">
-                        <img src="images/orelsan.jpg" alt="" />
-                    </figure>
-                    <p>
-                        Membre des Casseurs-Flowteurs avec son ami Gringe, voix française de Saitama du manga One Punch
-                        Man, il revient à la musique en 2017 avec le titre "basique",
-                        avant de sortir l'album la fête est finie, certifié disque de diamant. Le rappeur a remporté
-                        trois Victoires de la musique.
-                        Ses titres les plus populaires sont paradis, défaite de famille et mes grands-parents.
-                    </p>
-
-
                 </ul>
             </article>
 
