--- a/music/rap.html
+++ b/music/rap.html
@@ -73,8 +73,8 @@
                     <li>
                         Columbine
                         <figure class="float-rightbordered">
-                            <img src="images/columbine.jpg"
-                                alt="le logo du groupe, «colombe-Kalash» ( kalachnikov, le fusil d'assaut russe AK-47)" />
+                            <img src="../images/columbine.jpg"
+                                alt="le logo du groupe, «colombe-Kalash» ( kalachnikov, le fusil d'assaut russe AK-47)" width="200" />
                         </figure>
                         <p>
                             collectif de rap français formé en 2014, originaire de la banlieu de Rennes, leur troisième
@@ -86,7 +86,7 @@
                     <li>
                         Nekfeu
                         <figure class="float-rightbordered">
-                            <img src="images/nekfeu.jpg" height="300px" width="300px" alt="" />
+                            <img src="../images/nekfeu.jpg" alt="nekfeu" width="200" />
                         </figure>
                         <p>
                             Membre du groupe S-Crew et 1995, il appartient au collectif l'Entourage et a également fait
@@ -99,7 +99,7 @@
                     <li>
                         PNL
                         <figure class="float-rightbordered">
-                            <img src="PT19_20\images\pnl.jpg" alt="la pochette de leur dernier album, deux frères." />
+                            <img src="../images/pnl.jpg" alt="la pochette de leur dernier album, deux frères." width="200" />
                         </figure>
                         <p>
                             sigle de Peace N’ Lovés, est un groupe de rap français indépendant, composé de deux frères,
@@ -129,7 +129,7 @@
                     <li>
                         Orelsan
                         <figure class="float-rightbordered">
-                            <img src="images/orelsan.jpg" alt="" />
+                            <img src="../images/orelsan.jpg" alt="orelsan" width="200" />
                         </figure>
                         <p>
                             Membre des Casseurs-Flowteurs avec son ami Gringe, voix française de Saitama du manga One
