smooth img edges

--- a/music/rap.html
+++ b/music/rap.html
@@ -74,7 +74,8 @@
                         Columbine
                         <figure class="float-rightbordered">
                             <img src="../images/columbine.jpg"
-                                alt="le logo du groupe, «colombe-Kalash» ( kalachnikov, le fusil d'assaut russe AK-47)" width="200" />
+                                alt="le logo du groupe, «colombe-Kalash» ( kalachnikov, le fusil d'assaut russe AK-47)"
+                                width="200" class="rounded-corners" />
                         </figure>
                         <p>
                             collectif de rap français formé en 2014, originaire de la banlieu de Rennes, leur troisième
@@ -86,7 +87,7 @@
                     <li>
                         Nekfeu
                         <figure class="float-rightbordered">
-                            <img src="../images/nekfeu.jpg" alt="nekfeu" width="200" />
+                            <img src="../images/nekfeu.jpg" alt="nekfeu" width="200" class="rounded-corners" />
                         </figure>
                         <p>
                             Membre du groupe S-Crew et 1995, il appartient au collectif l'Entourage et a également fait
@@ -99,7 +100,8 @@
                     <li>
                         PNL
                         <figure class="float-rightbordered">
-                            <img src="../images/pnl.jpg" alt="la pochette de leur dernier album, deux frères." width="200" />
+                            <img src="../images/pnl.jpg" alt="la pochette de leur dernier album, deux frères."
+                                width="200" class="rounded-corners" />
                         </figure>
                         <p>
                             sigle de Peace N’ Lovés, est un groupe de rap français indépendant, composé de deux frères,
@@ -129,7 +131,7 @@
                     <li>
                         Orelsan
                         <figure class="float-rightbordered">
-                            <img src="../images/orelsan.jpg" alt="orelsan" width="200" />
+                            <img src="../images/orelsan.jpg" alt="orelsan" width="200" class="rounded-corners" />
                         </figure>
                         <p>
                             Membre des Casseurs-Flowteurs avec son ami Gringe, voix française de Saitama du manga One
