--- a/histoire.html
+++ b/histoire.html
@@ -30,7 +30,7 @@
             <h3>La musique au XXe siècle</h3>
             <figure class="float-right bordered">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Fon%C3%B3grafoEdison.JPG/220px-Fon%C3%B3grafoEdison.JPG"
-                    alt="Phonographe" width="200" />
+                    alt="Phonographe" width="200" class="rounded-corners" />
                 <figcaption>
                     Phonographe d'Edison
                     <div class="little-text">
