--- a/nav.html
+++ b/nav.html
@@ -45,9 +45,8 @@
                         </a>
                     </li>
                     <li>
-                        <!--TODO #7 : Images manquantes-->
                         <a href="music/pop.html#">
-                            <img src="icon_placeholder.png" alt="icon item 14" />
+                            <img src="images/icons/pop.png" alt="icon item 14" />
                             <div class="nav-text">Pop</div>
                         </a>
                     </li>
