fix first spotify intergration

--- a/music/rock.html
+++ b/music/rock.html
@@ -38,6 +38,10 @@
                     Haley</a> est considéré comme le premier à populariser le genre.
             </p>
             <span class="source">Source : Wikipédia</span>
+            <p>
+                Son titre le plus connu, qui a été un énorme succès en 1955. Le morceau est devenu emblématique de
+                la naissance du rock'n'roll.
+            </p>
             <div class="spotify-integ">
                 <div>
                     <iframe src="https://open.spotify.com/embed/track/34AmZ4PMz9iNZVp9AMIGZj" frameborder="0"
@@ -49,8 +53,7 @@
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
                 <figcaption>
-                    Son titre le plus connu, qui a été un énorme succès en 1955. Le morceau est devenu emblématique de
-                    la naissance du rock'n'roll.
+                    Rock Around The Clock de Bill Halley (1955)
                 </figcaption>
             </figure>
             <p>
