--- a/music/metal.html
+++ b/music/metal.html
@@ -94,13 +94,19 @@
             </p>
             <ul>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Iron_Maiden" target="_blank">Iron Maiden</a>
+                    <a href="https://fr.wikipedia.org/wiki/Iron_Maiden" target="_blank">Iron Maiden</a> <a
+                        href="https://open.spotify.com/artist/6mdiAmATAx73kdxrNrnlao" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Judas_Priest" target="_blank">Judas Priest</a>
+                    <a href="https://fr.wikipedia.org/wiki/Judas_Priest" target="_blank">Judas Priest</a> <a
+                        href="https://open.spotify.com/artist/2tRsMl4eGxwoNabM08Dm4I" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Dio_(groupe)" target="_blank">Dio</a>
+                    <a href="https://fr.wikipedia.org/wiki/Dio_(groupe)" target="_blank">Dio</a> <a
+                        href="https://open.spotify.com/artist/4CYeVo5iZbtYGBN4Isc3n6" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
             </ul>
             <div class="spotify-integ">
@@ -133,7 +139,8 @@
                 Thrash metal
             </h2>
             <p>
-                Le Thrash metal est plutôt dérivé du <a href="rock.html#punk">Punk rock</a>. Encore plus rapide/aggressive
+                Le Thrash metal est plutôt dérivé du <a href="rock.html#punk">Punk rock</a>. Encore plus
+                rapide/aggressive
                 que le <a href="#heavy">Heavy metal</a>, il se développe dans les années 1980. Le Thrash aborde souvent
                 des sujets comme la politique, la mort, la drogue ou la violence en général. Les groupes tels que <a
                     href="https://fr.wikipedia.org/wiki/Iron_Maiden" target="_blank">Iron Maiden</a>, <a
@@ -144,13 +151,19 @@
             </p>
             <ul>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Metallica" target="_blank">Metallica</a>
+                    <a href="https://fr.wikipedia.org/wiki/Metallica" target="_blank">Metallica</a> <a
+                        href="https://open.spotify.com/artist/2ye2Wgw4gimLv2eAKyk1NB" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Slayer" target="_blank">Slayer</a>
+                    <a href="https://fr.wikipedia.org/wiki/Slayer" target="_blank">Slayer</a> <a
+                        href="https://open.spotify.com/artist/1IQ2e1buppatiN1bxUVkrk" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Trivium_(groupe)" target="_blank">Trivium</a>
+                    <a href="https://fr.wikipedia.org/wiki/Trivium_(groupe)" target="_blank">Trivium</a> <a
+                        href="https://open.spotify.com/artist/278ZYwGhdK6QTzE3MFePnP" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
             </ul>
             <div class="spotify-integ">
@@ -192,13 +205,19 @@
             </p>
             <ul>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Mayhem" target="_blank">Mayhem</a>
+                    <a href="https://fr.wikipedia.org/wiki/Mayhem" target="_blank">Mayhem</a> <a
+                        href="https://open.spotify.com/artist/0dR10i73opHXuRuLbgxltM" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Immortal" target="_blank">Immortal</a>
+                    <a href="https://fr.wikipedia.org/wiki/Immortal" target="_blank">Immortal</a> <a
+                        href="https://open.spotify.com/artist/2mVTkiwfm4ic6DnHpmFq8K" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Darkthrone" target="_blank">Darkthrone</a>
+                    <a href="https://fr.wikipedia.org/wiki/Darkthrone" target="_blank">Darkthrone</a> <a
+                        href="https://open.spotify.com/artist/7kWnE981vITXDnAD2cZmCV" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
             </ul>
             <div class="spotify-integ">
@@ -240,13 +259,19 @@
             </p>
             <ul>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Death" target="_blank">Death</a>
+                    <a href="https://fr.wikipedia.org/wiki/Death" target="_blank">Death</a> <a
+                        href="https://open.spotify.com/artist/4f5V3PQ66nIrBCqugJtaGn" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Cannibal_Corpse" target="_blank">Cannibal Corpse</a>
+                    <a href="https://fr.wikipedia.org/wiki/Cannibal_Corpse" target="_blank">Cannibal Corpse</a> <a
+                        href="https://open.spotify.com/artist/0yLwGBQiBqhXOvmTfH2A7n" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Gojira" target="_blank">Gojira</a>
+                    <a href="https://fr.wikipedia.org/wiki/Gojira" target="_blank">Gojira</a> <a
+                        href="https://open.spotify.com/artist/0GDGKpJFhVpcjIGF8N6Ewt" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
             </ul>
             <div class="spotify-integ">
@@ -291,13 +316,19 @@
             </p>
             <ul>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Helloween" target="_blank">Helloween</a>
+                    <a href="https://fr.wikipedia.org/wiki/Helloween" target="_blank">Helloween</a> <a
+                        href="https://open.spotify.com/artist/4pQN0GB0fNEEOfQCaWotsY" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Powerwolf" target="_blank">Powerwolf</a>
+                    <a href="https://fr.wikipedia.org/wiki/Powerwolf" target="_blank">Powerwolf</a> <a
+                        href="https://open.spotify.com/artist/5HFkc3t0HYETL4JeEbDB1v" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/DragonForce" target="_blank">DragonForce</a>
+                    <a href="https://fr.wikipedia.org/wiki/DragonForce" target="_blank">DragonForce</a> <a
+                        href="https://open.spotify.com/artist/2pH3wEn4eYlMMIIQyKPbVR" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
             </ul>
             <div class="spotify-integ">
@@ -342,13 +373,19 @@
             </p>
             <ul>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Eluveitie" target="_blank">Eluveitie</a>
+                    <a href="https://fr.wikipedia.org/wiki/Eluveitie" target="_blank">Eluveitie</a> <a
+                        href="https://open.spotify.com/artist/5X0N2k3qMnI8kSrGJT3kfT" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Turisas" target="_blank">Turisas</a>
+                    <a href="https://fr.wikipedia.org/wiki/Turisas" target="_blank">Turisas</a> <a
+                        href="https://open.spotify.com/artist/0ykT1si9XRFPmEvWOnf4YI" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Korpiklaani" target="_blank">Korpiklaani</a>
+                    <a href="https://fr.wikipedia.org/wiki/Korpiklaani" target="_blank">Korpiklaani</a> <a
+                        href="https://open.spotify.com/artist/521Yl3LUvD7G9dMRO4fpCy" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
             </ul>
             <div class="spotify-integ">
@@ -393,13 +430,19 @@
             </p>
             <ul>
                 <li>
-                    <a href="https://en.wikipedia.org/wiki/Orodruin_(band)">Orodruin</a>
+                    <a href="https://en.wikipedia.org/wiki/Orodruin_(band)">Orodruin</a> <a
+                        href="https://open.spotify.com/artist/0cl3uOSs8rUTdxSiM5I5yh" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
                 <li>
-                    <a href="https://en.wikipedia.org/wiki/Novembers_Doom">Novembers Doom</a> (death doom)
+                    <a href="https://en.wikipedia.org/wiki/Novembers_Doom">Novembers Doom</a> (death doom) <a
+                        href="https://open.spotify.com/artist/7CPjagX3gF7woK0P7YNuKd" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Shape_of_Despair">Shape Of Despair</a>
+                    <a href="https://fr.wikipedia.org/wiki/Shape_of_Despair">Shape Of Despair</a> <a
+                        href="https://open.spotify.com/artist/7Dw0RaAayqoGd0z2oHT4R6" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
             </ul>
             <div class="spotify-integ">
@@ -442,13 +485,19 @@
             </p>
             <ul>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/System_of_a_Down" target="_blank">System of a Down</a>
+                    <a href="https://fr.wikipedia.org/wiki/System_of_a_Down" target="_blank">System of a Down</a> <a
+                        href="https://open.spotify.com/artist/5eAWCfyUhZtHHtBdNk56l1" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Korn" target="_blank">Korn</a>
+                    <a href="https://fr.wikipedia.org/wiki/Korn" target="_blank">Korn</a> <a
+                        href="https://open.spotify.com/artist/3RNrq3jvMZxD9ZyoOZbQOD" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Soil_(groupe)" target="_blank">Soil</a>
+                    <a href="https://fr.wikipedia.org/wiki/Soil_(groupe)" target="_blank">Soil</a> <a
+                        href="https://open.spotify.com/artist/4PoYwGOztIrPpBfRIlMSxP" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
             </ul>
             <div class="spotify-integ">
@@ -495,13 +544,19 @@
             </p>
             <ul>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Lamb_of_God" target="_blank">Lamb of God</a>
+                    <a href="https://fr.wikipedia.org/wiki/Lamb_of_God" target="_blank">Lamb of God</a> <a
+                        href="https://open.spotify.com/artist/3JFsVIxOn7STeilPICkkB2" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/DevilDriver" target="_blank">DevilDriver</a>
+                    <a href="https://fr.wikipedia.org/wiki/DevilDriver" target="_blank">DevilDriver</a> <a
+                        href="https://open.spotify.com/artist/79el7mcHYhXYW3Zek21i0L" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Machine_Head_(groupe)" target="_blank">Machine Head</a>
+                    <a href="https://fr.wikipedia.org/wiki/Machine_Head_(groupe)" target="_blank">Machine Head</a> <a
+                        href="https://open.spotify.com/artist/0lVlNsuGaOr9vMHCZIAKMt" target="_blank"><img
+                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                 </li>
             </ul>
             <div class="spotify-integ">
