on aime toujours pas le latin

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
     <header>
         <div class="title">
             <a href="#" class="logo80"></a>
-            <!--TODO #6 : Trouver un sous titre au site-->
             <div class="subtitle">
-                Proin vitae neque in sapien faucibus auctor id sed ipsum.
+                Présentation
             </div>
         </div>
     </header>
@@ -106,51 +105,6 @@
                 <p>
                     Le fait que la musique soit à portée de main incite donc à l'écouter plus souvent, à tel point que
                     la musique occupe une grande place chez la plupart des jeunes (qu'ils soient ados ou adultes).
-                </p>
-            </article>
-        </section>
-        <section>
-            <h2>First project</h2>
-            <article>
-                <h3>Hello world !</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
-                    ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed
-                    lacinia
-                    urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in
-                    justo
-                    vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
-                    lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
-                    hendrerit ut ipsum.
-                </p>
-            </article>
-            <article>
-                <h3>Hello world !</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
-                    ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed
-                    lacinia
-                    urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in
-                    justo
-                    vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
-                    lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
-                    hendrerit ut ipsum.
-                </p>
-            </article>
-        </section>
-        <section>
-            <h2>First Project</h2>
-            <article>
-                <h3>Hello world !</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
-                    ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed
-                    lacinia
-                    urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in
-                    justo
-                    vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
-                    lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
-                    hendrerit ut ipsum.
                 </p>
             </article>
         </section>
