--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </p>
                 <ul>
                     <li>
-                        <a href="">La musique électronique</a>
+                        <a href="music/electro.html">La musique électronique</a>
                     </li>
                     <li>
                         <a href="music/metal.html">Le metal</a>
@@ -61,7 +61,7 @@
                         <a href="music/rap.html">Le rap</a>
                     </li>
                     <li>
-                        <a href="">L'alternative</a>
+                        <a href="music/alternative.html">L'alternative</a>
                     </li>
                 </ul>
                 <p>
