update groove metal

--- a/music/metal.html
+++ b/music/metal.html
@@ -533,7 +533,8 @@
             <p>
                 Le Groove metal se trouve juste entre le Heavy metal et le Death metal. <a
                     href="https://fr.wikipedia.org/wiki/Pantera" target="_blank">Pantera</a>
-                a été l'un des précurseurs du genre. Le genre est plus axé sur les vocales par rapport au Death metal.
+                a été l'un des précurseurs du genre. Le genre est plus axé sur les vocales par rapport au Death metal et
+                se différencie surtout par le côté plus mélodique.
                 Le
                 Groove metal est également un des style ayant
                 influencé le <a href="https://fr.wikipedia.org/wiki/Nu_metal" target="_blank">Nu metal</a> (un
