added today's view on metal

--- a/music/metal.html
+++ b/music/metal.html
@@ -586,6 +586,37 @@
             </figure>
             <span class="button"><a href="#">Retour en haut de la page !</a></span>
         </section>
+        <section id="today">
+            <h2>
+                Aujourd'hui
+            </h2>
+            <p>
+                De nos jours, le metal n'est toujours pas aussi populaire que d'autres styles étant donné le côté
+                aggressif de ce dernier. Comme toute musique, on peut l'écouter pour le plaisir, mais plus généralement
+                pour donner une certaine énergie (pendant un acte sportif par exemple) plutôt que pour calmer, cela va
+                de soi.
+                Le metal est, comme le <a href="rap.html">Rap</a> utilisé pour parler des problèmes de la vie, la
+                politique ou
+                l'éthique. La majorité du temps, les artistes abordent des aspects négatifs de la vie ou de la société
+                plutôt que positifs.
+                On retrouve des groupes comme <a href="https://fr.wikipedia.org/wiki/Metallica"
+                    target="_blank">Metallica</a> ou encore
+                <a href="https://fr.wikipedia.org/wiki/System_of_a_Down" target="_blank">System of a Down</a>, connu
+                pour être un groupe
+                engagé dans la politique ; et beaucoup, Beaucoup d'autres.
+            </p>
+            <p>
+                Le metal ne se caractérise pas que à l'auditif, mais aussi au visuel. L'image donné par les groupes est
+                soigneusement choisie
+                et doit refléter l'atmosphère du groupe. Cela se voit souvent par rapport à l'apparence que donnent les
+                artistes d'un groupe,
+                leur présence en concert ou encore tout simplement les images d'album. Le metal est également un style
+                visuel qui a presque autant
+                d'importance que le style auditif.
+            </p>
+            <span class="button"><a href="#">Retour en haut de la page !</a></span>
+        </section>
+
     </main>
     <footer>
         <iframe src="../footer.html"></iframe>
