partie electro + ajout liens youtube partie rap

--- a/music/rap.html
+++ b/music/rap.html
@@ -63,19 +63,19 @@
             </ul>
 
             <article id="rapfr">
-                <h2>Rap FR</h2>
                 <p>
-                    Comme son nom l'indique, il s'agit du rap français. A la fin des années 80, celui-ci arrive avec les
-                    premiers freestyles de NTM, Assassin et MC Solaar.
-                    Voici quelques exemples de rappeurs les plus populaires aujourd'hui.
+                    Voici ci-dessous une liste de quelques Dj les plus connus aujourd'hui.
                 </p>
                 <ul>
                     <li>
                         Columbine
                         <figure class="float-right bordered">
                             <img src="../images/columbine.jpg"
-                                alt="le logo du groupe, «colombe-Kalash» ( kalachnikov, le fusil d'assaut russe AK-47)"
+                                alt="logo columbine"
                                 width="200" class="rounded-corners" />
+                                <figcaption>
+                                    le logo du groupe, «colombe-Kalash» ( kalachnikov, le fusil d'assaut russe AK-47)
+                                </figcaption>
                         </figure>
                         <p>
                             collectif de rap français formé en 2014, originaire de la banlieu de Rennes, leur troisième
@@ -83,11 +83,21 @@
                             Leur titres les plus connus sont pierre, feuille, papier, ciseau; c'est pas grave, adieu
                             bientôt, les prélis.
                         </p>
+                        <figure class="simple-yt">
+                            <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/YljnTp8yQFM"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                            <figcaption>
+                               Le clip pierre, feuille, papier, ciseaux, dans lequel le groupe dresse un portrait de leur époque.
+                            </figcaption>
                     </li>
                     <li>
                         Nekfeu
                         <figure class="float-right bordered">
                             <img src="../images/nekfeu.jpg" alt="nekfeu" width="200" class="rounded-corners" />
+                            <figcaption>
+                                Nekfeu
+                            </figcaption>
                         </figure>
                         <p>
                             Membre du groupe S-Crew et 1995, il appartient au collectif l'Entourage et a également fait
@@ -96,12 +106,22 @@
                             principaux
                             titres sont princesse, on verra, ma dope.
                         </p>
+                            <figure class="simple-yt">
+                            <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/YltjliK0ZeA"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                            <figcaption>
+                               Le titre on verra, sorti en 2015, dont le clip sur youtube a atteint environ 99 millions de vues.
+                            </figcaption>
                     </li>
                     <li>
                         PNL
                         <figure class="float-right bordered">
-                            <img src="../images/pnl.jpg" alt="la pochette de leur dernier album, deux frères."
+                            <img src="../images/pnl.jpg" alt="PNL"
                                 width="200" class="rounded-corners" />
+                                <figcaption>
+                                    la pochette de leur dernier album, deux frères.
+                                </figcaption>
                         </figure>
                         <p>
                             sigle de Peace N’ Lovés, est un groupe de rap français indépendant, composé de deux frères,
@@ -132,13 +152,14 @@
                         Orelsan
                         <figure class="float-right bordered">
                             <img src="../images/orelsan.jpg" alt="orelsan" width="200" class="rounded-corners" />
+                            <figcaption>
+                                Orelsan
+                            </figcaption>
                         </figure>
                         <p>
-                            Membre des Casseurs-Flowteurs avec son ami Gringe, voix française de Saitama du manga One
-                            Punch
-                            Man, il revient à la musique en 2017 avec le titre "basique",
-                            avant de sortir l'album la fête est finie, certifié disque de diamant. Le rappeur a remporté
-                            trois Victoires de la musique.
+                            Membre des Casseurs-Flowteurs avec son ami Gringe, voix française de Saitama du manga One Punch Man,
+                            il revient à la musique en 2017 avec le titre "basique", avant de sortir l'album la fête est finie,
+                            certifié disque de diamant. Le rappeur a remporté trois Victoires de la musique.
                             Ses titres les plus populaires sont paradis, défaite de famille et mes grands-parents.
                         </p>
                     </li>
@@ -172,12 +193,18 @@
                     Il existe de nombreux autres rappeurs américains connus, comme Kanye West, Fat Joe, Asap Rocky,
                     XXXTentacion, Jay Z, Snoop Dog, Dr Dre et beaucoup d'autres.
                 </p>
-                <figure class="simple-yt">
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/LunHybOKIjU"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                 <figure class="double-yt">
+                    <div>
+                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/LunHybOKIjU"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/_Yhyp-_hX2s"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
                     <figcaption>
-                        Le freestyle anti-Trump.
+                       Le freestyle anti Trump, et la chanson lose yourself, écrite pendant le tournage du film 8 Mile, largement inspiré du parcours d'Eminem,
+                       et pour laquelle il a remporté un Oscar de la meilleure chanson originale ainsi que deux Grammy awards.
                     </figcaption>
                 </figure>
             </article>
