--- a/music/rock.html
+++ b/music/rock.html
@@ -88,6 +88,13 @@
                 <h3>
                     Rockabilly
                 </h3>
+                <figure class="float-right bordered">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/2/2d/PresleyPromo1954PhotoOnly.jpg?1572343947313"
+                            alt="Elvis Presley" height="130" class="rounded-corners" />
+                        <figcaption>
+                            Elvis Presley
+                        </figcaption>
+                    </figure>
                 <p>
                     Le rockabilly est un croisement entre le rythm and blues et la country, le rockabilly naît au sud
                     des États-Unis dans les années 50 avec des artistes comme Elvis Presley et Bill Haley. Genre rural,
@@ -143,6 +150,16 @@
                 <span class="button"><a href="#">Retour en haut de la page !</a></span>
             </article>
             <article id="progressif">
+                <figure class="float-right bordered computer">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/e/e4/2180_-_Pittsburgh_-_Mellon_Arena_-_Genesis_-_The_Carpet_Crawlers.JPG"
+                        alt="Phonographe" width="200" class="rounded-corners" />
+                    <figcaption>
+                        Genesis
+                        <div class="little-text">
+                            Crédits : Andrew Bossi
+                        </div>
+                    </figcaption>
+                </figure>
                 <h3>
                     Le rock progressif
                 </h3>
@@ -196,6 +213,13 @@
                 <span class="button"><a href="#">Retour en haut de la page !</a></span>
             </article>
             <article id="hard">
+                <figure class="float-right bordered computer">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/8/88/Helmfrid-sofa4_Touched.JPG"
+                        alt="Phonographe" width="150" class="rounded-corners" />
+                    <figcaption>
+                        The Kinks
+                    </figcaption>
+                </figure>
                 <h3>
                     Le Hard Rock
                 </h3>
@@ -349,6 +373,13 @@
                 <h3>
                     Le rock indépendant
                 </h3>
+                <figure class="float-right bordered computer">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/e/e1/Panic%21_At_The_Disco_Shorty_Awards_2015.png?1572344076434"
+                            alt="Panic! at the disco" width="250" class="rounded-corners" />
+                        <figcaption>
+                            Panic! at the disco
+                        </figcaption>
+                    </figure>
                 <p>
                     Aussi inspiré du mouvement punk dont il tire son esprit « do it yourself », le rock indépendant naît
                     au Royaume-Uni dans les années 70. Comme son cousin le rock alternatif, le rock indépendant se
