--- a/music/rock.html
+++ b/music/rock.html
@@ -96,7 +96,7 @@
                         </figcaption>
                     </figure>
                 <p>
-                    Le rockabilly est un croisement entre le rythm and blues et la country, le rockabilly naît au sud
+                    Le rockabilly est un croisement entre le rhythm and blues et la country, le rockabilly naît au sud
                     des États-Unis dans les années 50 avec des artistes comme Elvis Presley et Bill Haley. Genre rural,
                     il tient son nom d’un mot-valise entre rock et hilbilly, un terme désignant les péquenauds, les
                     ploucs. Considéré à l’origine comme un enfant de la country, le rockabilly est le premier sous-genre
