correction orthographique rap

--- a/music/rap.html
+++ b/music/rap.html
@@ -78,7 +78,7 @@
                                 </figcaption>
                         </figure>
                         <p>
-                            collectif de rap français formé en 2014, originaire de la banlieu de Rennes, leur troisième
+                            collectif de rap français formé en 2014, originaire de la banlieue de Rennes, leur troisième
                             album Adieu bientôt a été certifié disque de platine.
                             Leur titres les plus connus sont pierre, feuille, papier, ciseau; c'est pas grave, adieu
                             bientôt, les prélis.
@@ -111,7 +111,7 @@
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
                             <figcaption>
-                               Le titre on verra, sorti en 2015, dont le clip sur youtube a atteint environ 99 millions de vues.
+                               Le titre on verra, sorti en 2015, dont le clip sur YouTube a atteint environ 99 millions de vues.
                             </figcaption>
                     </li>
                     <li>
