correction orthographique electro

--- a/music/electro.html
+++ b/music/electro.html
@@ -32,8 +32,8 @@
             <p>
                 L'électro ou musique électronique, est un style de musique entièrement composé pour danser et principalement joué dans des boîtes de nuit, raves et festivals.
                 Cette variété est produite et jouée par des DJ (Disc Jockey).
-                Il existe de nombreux festivals de musique electronique, les plus connus étant Tomorrowland en Belgique,
-                élu trois fois de suite comme « meilleur événement musical de l'année ». Il demeure aujourd'hui le festival d'élctro le plus connu au monde.
+                Il existe de nombreux festivals de musique électronique, les plus connus étant Tomorrowland en Belgique,
+                élu trois fois de suite comme « meilleur événement musical de l'année ». Il demeure aujourd'hui le festival d'électro le plus connu au monde.
                 Chaque année, 400 000 festivaliers s'y retrouvent sur 2 week-ends du mois de juillet. 
                 L'Ultra Music Festival (UMF), festival américain organisé à Miami, s'est exporté dans d'autres pays. Il se déroule aujourd'hui sur 5 continents.
                 L'entreprise  Ultra Worldwide organise les festivals UMF, qui comptent 45 dates sur plus d'une vingtaine de pays,
