added links on nav

--- a/nav.html
+++ b/nav.html
@@ -51,7 +51,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="music/electro.html#">
                             <img src="images/icons/electro.png" alt="icon item 15" />
                             <div class="nav-text">Electro</div>
                         </a>
@@ -64,7 +64,7 @@
                     </li>
                     <li>
                         <!--TODO #7 : Images manquantes-->
-                        <a href="#">
+                        <a href="music/alternative.html#">
                             <img src="icon_placeholder.png" alt="icon item 17" />
                             <div class="nav-text">Alternative</div>
                         </a>
