ajout 1 image tiesto

--- a/music/electro.html
+++ b/music/electro.html
@@ -110,6 +110,12 @@
                         qui a engrangé 63 millions de dollars entre le 1er juin 2015 et le 1er juin 2016.
                         Ses titres les plus populaires sont red lights, secrets, wasted.
                         </p>
+                        <figure class="float-right bordered">
+                            <img src="../images/tiesto2.jpg" alt=""  width="400" class="rounded-corners" />
+                            <figcaption>
+                            Le dimanche 27 octobre, il est invité au grand prix de Formule 1 du Mexique pour mixer après la cérémonie du podium au sein du stadium.
+                            </figcaption>
+                        </figure>  
                         <figure class="simple-yt">
                                 <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/Dr1nN__-2Po"
                                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
