--- a/histoire.html
+++ b/histoire.html
@@ -40,12 +40,12 @@
                 </figcaption>
             </figure>
             <p>
-                La musique à une importance grandissante à partir du 20<span class="power">e</span> siècle les
+                La musique à une importance grandissante à partir du XX<span class="power">e</span> siècle les
                 différents genres musicaux populaires auxquels les moyens de communication de masse permettent une
                 diffusion sans précédent.
             </p>
             <p>
-                Au début du 20<span class="power">e</span> siècle, la musique occidentale a profondément changé : grâce
+                Au début du XX<span class="power">e</span> siècle, la musique occidentale a profondément changé : grâce
                 à l'invention de la radiodiffusion et du phonographe, les modes et les temps de l'écoute (à l'origine
                 limitée aux concerts donnés dans des lieux spécifiquement dédiés comme les salles de théâtre, les clubs
                 ou les domiciles privés) ont évolués. La musique commence à être écoutée dans les maisons et plus
@@ -61,7 +61,7 @@
             </p>
             <p>
                 Ces nouvelles possibilités techniques offrent une occasion de développer de nouveaux moyens
-                d'expression, créant entre 1920 et la fin des années 1980 , une floraison de nouveaux styles ou
+                d'expression, créant entre 1920 et la fin des années 1980, une floraison de nouveaux styles ou
                 genres comme le jazz, le blues, le rock, la soul music, la musique pop, la musique funk, le rap,
                 le metal. Chacun de ces styles se générant ensuite en sous-genres. Naissent ainsi des personnages qui
                 deviennent d'authentiques phénomènes médiatiques atteignant une popularité sans précédent comme Elvis
@@ -70,7 +70,7 @@
             <p>
                 Ces facteurs, ajoutés aux mutations sociales et économiques du monde occidental, font se développer
                 d'une manière extrêmement importante les aspects commerciaux du phénomène musical : dans le courant
-                du 20<span class="power">e</span> siècle, la demande populaire de musique fait naître, en occident
+                du XX<span class="power">e</span> siècle, la demande populaire de musique fait naître, en occident
                 et dans le reste du monde, une véritable industrie musicale.
             </p>
             <p>
