--- a/index.html
+++ b/index.html
@@ -74,15 +74,17 @@
             <article>
                 <h3>Son histoire</h3>
                 <p>
-                    La musique une importance grandissante à partir du XXe siècle les différents genres musicaux
-                    populaires auxquels les moyens de communication de masse permettent une diffusion sans précédent.
+                    La musique une importance grandissante à partir du XX<span class="power">e</span> siècle les
+                    différents genres musicaux populaires auxquels les moyens de communication de masse permettent une
+                    diffusion sans précédent.
                 </p>
                 <span class="source">Source : Wikipedia</span>
                 <p>
-                    Jusqu’au IXe siècle, l’Église s’efforce d’imposer partout le chant grégorien ou « plain-chant ».
-                    Cette musique austère se déploie en amples mélodies monodiques (une seule voix), dont le rythme et
-                    les inflexions sont étroitement liés au rythme et aux inflexions du texte liturgique. C'est au IXeme
-                    siècle que les premiers essais pour noter la musique sont effectués.
+                    Jusqu’au IX<span class="power">e</span> siècle, l’Église s’efforce d’imposer partout le chant
+                    grégorien ou « plain-chant ». Cette musique austère se déploie en amples mélodies monodiques (une
+                    seule voix), dont le rythme et les inflexions sont étroitement liés au rythme et aux inflexions du
+                    texte liturgique. C'est aussi au IX<span class="power">e</span> siècle que les premiers essais 
+                    pour noter la musique sont effectués.
                 </p>
                 <span class="source">Source : Symphozik.info</span>
                 <span class="button"><a href="histoire.html">Lire la suite !</a></span>
@@ -93,8 +95,9 @@
                     La musique à évoluée avec la technologie, ce qui a eu pour effet de populariser la première avec la
                     miniaturisation de la seconde.
 
-                    Par exemple : Pour écouter de la musique avant le XXe siècle, il fallait aller dans un endroit
-                    conçu pour diffuser de la musique, un opéra ou une salle de concert par exemple.
+                    Par exemple : Pour écouter de la musique avant le XX<span class="power">e</span> siècle, il fallait
+                    aller dans un endroit conçu pour diffuser de la musique, un opéra ou une salle de concert par
+                    exemple.
                 </p>
                 <p>
                     Avec l'invention des postes radio, on pouvait écouter la musique chez soi. Plus la technologie
