--- a/music/metal.html
+++ b/music/metal.html
@@ -592,7 +592,7 @@
             </h2>
             <p>
                 De nos jours, le metal n'est toujours pas aussi populaire que d'autres styles étant donné le côté
-                aggressif de ce dernier. Comme toute musique, on peut l'écouter pour le plaisir, mais plus généralement
+                agressif de ce dernier. Comme toute musique, on peut l'écouter pour le plaisir, mais plus généralement
                 pour donner une certaine énergie (pendant un acte sportif par exemple) plutôt que pour calmer, cela va
                 de soi.
                 Le metal est, comme le <a href="rap.html">Rap</a> utilisé pour parler des problèmes de la vie, la
